# qdx50d-air-pressure-sensor-poc

./: .editorconfig  .gitignore  pyproject.toml  readme.md
src/: basic.py
