[tool.poetry]
name = "qdx50d-poc"
version = "0.1.0"
description = "A quick and dirty PoC for the QDX50D sensor"
authors = ["Karl Quinsland"]
readme = "readme.md"
# Don't need fancy packages for this PoC
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
structlog = "^24.4.0"
minimalmodbus = "^2.1.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
